--- a/index.html
+++ b/index.html
@@ -71,30 +71,6 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Pac Man 3D</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/R.jpg" alt="" /></a>
-									<p>Experience a spooky 3D version of Pac-Man with a horror twist. Navigate eerie mazes, dodge ghosts, and collect items to survive.
-										 Uncover secrets in the shadows as you try to escape.
-										 With creepy visuals and an eerie vibe, it's a thrilling twist on a classic game</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">" Zomo "</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/Zomo.PNG" alt="" /></a>
-									<p>Experience a caring life simulation game crafted for children with autism.
-										 Choose and nurture your animal companion, play outdoor mini-games for rewards, and earn gifts by looking after your home and pet.
-										 This interactive journey fosters responsibility and fun in a supportive environment.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
 										<h2><a href="#">" FattyBird "</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/FattyBird00.jpg" alt="" /></a>
@@ -117,12 +93,47 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="#">Pac Man 3D</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/R.jpg" alt="" /></a>
+									<p>Experience a spooky 3D version of Pac-Man with a horror twist. Navigate eerie mazes, dodge ghosts, and collect items to survive.
+										 Uncover secrets in the shadows as you try to escape.
+										 With creepy visuals and an eerie vibe, it's a thrilling twist on a classic game</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Poly Game Jam : "Shape Shift"</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/PGJ.PNG" alt="" /></a>
+									<p>a 2D Unity game created during Poly Game Jam Monastir. Play as a bat, dodge garlic, and navigate changing dark zones by shifting shapes.
+									Experience a visually captivating adventure while evading obstacles in dynamic environments.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">FPS Game </h2>
 									</header>
 									<br/>
 									<a href="#" class="image fit"><img src="images/FPS_Game.PNG" alt="" /></a>
-									<p>Experience an action-packed FPS adventure against futuristic enemies. Collect health boosts and powerful items while engaging in intense combat.
-										 With immersive gameplay, this game delivers thrilling challenges in high-tech warfare.</p>
+									<p>Experience a thrilling FPS adventure in a post-apocalyptic world battling zombies and strange creatures. 
+									Engage in intense combat, gather essential health boosts, and collect powerful items for an immersive and adrenaline-pumping gaming experience.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">" Zomo "</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Zomo.PNG" alt="" /></a>
+									<p>Experience a caring life simulation game crafted for children with autism.
+										 Choose and nurture your animal companion, play outdoor mini-games for rewards, and earn gifts by looking after your home and pet.
+										 This interactive journey fosters responsibility and fun in a supportive environment.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View project</a></li>
 									</ul>
